trabalhando tela serviços

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -114,20 +114,24 @@
                         <p>selecione um serviço desejado</p>
                         <div class="service-list">
                             <form action="/action_page.php" class="service-list">
-                                  <input type="radio" id="item1" name="serv" value="item1">
-                                  <label for="item1" class="item-list">Corte de Cabelo</label>
+                                  <input type="radio" id="item1" name="serv" value="item1" >
+                                  <label for="item1" class="item-list">Cabelo</label>
                                   <input type="radio" id="item2" name="serv" value="item2">
-                                  <label for="item2" class="item-list">Pintar a Unha</label>
+                                  <label for="item2" class="item-list">Unha</label>
                                   <input type="radio" id="item3" name="serv" value="item3">
-                                  <label for="item3" class="item-list">Exteção de Cílios</label>
+                                  <label for="item3" class="item-list">Cílios</label>
                                   <input type="radio" id="item4" name="serv" value="item4">
-                                  <label for="item4" class="item-list">Fazer Sobrancelha</label>
+                                  <label for="item4" class="item-list">Sobrancelha</label>
                                   <input type="radio" id="item5" name="serv" value="item5">
-                                  <label for="item5" class="item-list">Aplicar unhas de Gel5</label>
+                                  <label for="item5" class="item-list">item</label>
                                   <input type="radio" id="item6" name="serv" value="item6">
-                                  <label for="item6" class="item-list">Exteção de Cílios6</label>
+                                  <label for="item6" class="item-list">item</label>
                                   <input type="radio" id="item7" name="serv" value="item7">
-                                  <label for="item7" class="item-list">Exteção de Cílios7</label>
+                                  <label for="item7" class="item-list">item</label>
+                                  <input type="radio" id="item8" name="serv" value="item8">
+                                  <label for="item8" class="item-list">item</label>
+                                  <input type="radio" id="item9" name="serv" value="item9">
+                                  <label for="item9" class="item-list">item</label>
                                 </form> 
                         </div>
                     </div>
