criando campo nosso time

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,8 +30,17 @@
             </div>
         </div>
         <div id="our-team">
+            <div id="team-content">
             <h1>NOSSO TIME</h1>
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh tellus molestie nunc non blandit massa. Fames ac turpis egestas integer eget aliquet nibh praesent. Morbi quis commodo odio aenean sed adipiscing. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum.</p>
+            </div>
+            <div id="team-corrossel">
+                <div class="carrossel-tem1"></div>
+                <div class="carrossel-tem2"></div>
+                <div class="carrossel-tem3"></div>
+                <div class="carrossel-tem4"></div>
+                <div class="carrossel-tem5"></div>
+            </div>
 
         </div>
         <div class="main" id="main">
